--- a/KalamazoDefteri/Views/Shared/_Layout.cshtml
+++ b/KalamazoDefteri/Views/Shared/_Layout.cshtml
@@ -180,12 +180,15 @@
                             <span></span>
                             <span></span>
                         </div>
-                        <div class="search-box pull-left">
-                            <form action="#">
-                                <input type="text" name="search" placeholder="Search..." required>
-                                <i class="ti-search"></i>
-                            </form>
-                        </div>
+                        <h2 class="page-title pull-left">TRAKYA KALAMAZO</h2>
+                        @{
+                            /* <div class="search-box pull-left">
+                             <form action="#">
+                                 <input type="text" name="search" placeholder="Search..." required>
+                                 <i class="ti-search"></i>
+                             </form>
+                         </div>
+                         */}
                     </div>
                     <!-- profile info & task notification -->
                     <div class="col-md-6 col-sm-4 clearfix">
