Database created with FluentMigrator

--- a/KalamazoDefteri/Views/Shared/_Layout.cshtml
+++ b/KalamazoDefteri/Views/Shared/_Layout.cshtml
@@ -5,22 +5,22 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Trakya Kalamazo Uygulaması</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="content/images/icon/favicon.ico">
-    <link rel="stylesheet" href="Content/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Content/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Content/css/themify-icons.css">
-    <link rel="stylesheet" href="Content/css/metisMenu.css">
-    <link rel="stylesheet" href="Content/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="Content/css/slicknav.min.css">
+    <link rel="shortcut icon" type="image/png" href="../../content/images/icon/favicon.ico">
+    <link rel="stylesheet" href="../../content/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../content/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../content/css/themify-icons.css">
+    <link rel="stylesheet" href="../../content/css/metisMenu.css">
+    <link rel="stylesheet" href="../../content/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../../content/css/slicknav.min.css">
     <!-- amchart css -->
     <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
     <!-- others css -->
-    <link rel="stylesheet" href="Content/css/typography.css">
-    <link rel="stylesheet" href="Content/css/default-css.css">
-    <link rel="stylesheet" href="Content/css/styles.css">
-    <link rel="stylesheet" href="Content/css/responsive.css">
+    <link rel="stylesheet" href="../../content/css/typography.css">
+    <link rel="stylesheet" href="../../content/css/default-css.css">
+    <link rel="stylesheet" href="../../content/css/styles.css">
+    <link rel="stylesheet" href="../../content/css/responsive.css">
     <!-- modernizr css -->
-    <script src="content/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="../../content/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -37,7 +37,7 @@
         <div class="sidebar-menu">
             <div class="sidebar-header">
                 <div class="logo">
-                    <a href="index.html"><img src="content/images/icon/logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="../../content/images/icon/logo.png" alt="logo"></a>
                 </div>
             </div>
             <div class="main-menu">
@@ -261,7 +261,7 @@
                                     <div class="nofity-list">
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img1.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img1.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -271,7 +271,7 @@
                                         </a>
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img2.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img2.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -281,7 +281,7 @@
                                         </a>
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img3.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img3.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -291,7 +291,7 @@
                                         </a>
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img4.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img4.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -301,7 +301,7 @@
                                         </a>
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img2.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img2.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -311,7 +311,7 @@
                                         </a>
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img1.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img1.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -321,7 +321,7 @@
                                         </a>
                                         <a href="#" class="notify-item">
                                             <div class="notify-thumb">
-                                                <img src="content/images/author/author-img3.jpg" alt="image">
+                                                <img src="../../content/images/author/author-img3.jpg" alt="image">
                                             </div>
                                             <div class="notify-text">
                                                 <p>Aglae Mayer</p>
@@ -354,7 +354,7 @@
                     </div>
                     <div class="col-sm-6 clearfix">
                         <div class="user-profile pull-right">
-                            <img class="avatar user-thumb" src="content/images/author/avatar.png" alt="avatar">
+                            <img class="avatar user-thumb" src="../../content/images/author/avatar.png" alt="avatar">
                             <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Kumkum Rai <i class="fa fa-angle-down"></i></h4>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#">Message</a>
@@ -565,14 +565,14 @@
     </div>
     <!-- offset area end -->
     <!-- jquery latest version -->
-    <script src="content/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="../../content/js/vendor/jquery-2.2.4.min.js"></script>
     <!-- bootstrap 4 js -->
-    <script src="content/js/popper.min.js"></script>
-    <script src="content/js/bootstrap.min.js"></script>
-    <script src="content/js/owl.carousel.min.js"></script>
-    <script src="content/js/metisMenu.min.js"></script>
-    <script src="content/js/jquery.slimscroll.min.js"></script>
-    <script src="content/js/jquery.slicknav.min.js"></script>
+    <script src="../../content/js/popper.min.js"></script>
+    <script src="../../content/js/bootstrap.min.js"></script>
+    <script src="../../content/js/owl.carousel.min.js"></script>
+    <script src="../../content/js/metisMenu.min.js"></script>
+    <script src="../../content/js/jquery.slimscroll.min.js"></script>
+    <script src="../../content/js/jquery.slicknav.min.js"></script>
     <!-- start chart js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <!-- start highcharts js -->
@@ -582,12 +582,12 @@
     <script>zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
     ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];</script>
     <!-- all line chart activation -->
-    <script src="content/js/line-chart.js"></script>
+    <script src="../../content/js/line-chart.js"></script>
     <!-- all pie chart -->
-    <script src="content/js/pie-chart.js"></script>
+    <script src="../../content/js/pie-chart.js"></script>
     <!-- others plugins -->
-    <script src="content/js/plugins.js"></script>
-    <script src="content/js/scripts.js"></script>
+    <script src="../../content/js/plugins.js"></script>
+    <script src="../../content/js/scripts.js"></script>
 </body>
 </html>
 
