--- a/KalamazoDefteri/Views/Auth/Login.cshtml
+++ b/KalamazoDefteri/Views/Auth/Login.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model KalamazoDefteri.ViewModels.AuthLogin
 @{
     ViewBag.Title = "Login";
     Layout = null;
@@ -41,20 +41,22 @@
     <div class="login-area login-s2">
         <div class="container">
             <div class="login-box ptb--100">
+                @using (Html.BeginForm())
+                {
                 <form>
                     <div class="login-form-head">
                         <h4>Sign In</h4>
                         <p>Hello there, Sign in and start managing your Admin Template</p>
                     </div>
                     <div class="login-form-body">
-                        <div class="form-gp">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" id="exampleInputEmail1">
+                        <div class="form-gp exampleInputEmail1">
+                            @Html.LabelFor(x => x.email)
+                            @Html.EditorFor(x => x.email)
                             <i class="ti-email"></i>
                         </div>
-                        <div class="form-gp">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" id="exampleInputPassword1">
+                        <div class="form-gp exampleInputPassword1">
+                            @Html.LabelFor(x => x.password)
+                            @Html.EditorFor(x => x.password)
                             <i class="ti-lock"></i>
                         </div>
                         <div class="row mb-4 rmber-area">
@@ -69,13 +71,14 @@
                             </div>
                         </div>
                         <div class="submit-btn-area">
-                            <button id="form_submit" type="submit">Submit <i class="ti-arrow-right"></i></button>
+                            <button id="form_submit" type="submit" value="login">Submit <i class="ti-arrow-right"></i></button>
                         </div>
                         <div class="form-footer text-center mt-5">
-                            <p class="text-muted">Don't have an account? <a href="register.html">Sign up</a></p>
+                            <p class="text-muted">Don't have an account? <a href="/register">Sign up</a></p>
                         </div>
                     </div>
                 </form>
+                }
             </div>
         </div>
     </div>
