--- a/KalamazoDefteri/Views/Auth/Login.cshtml
+++ b/KalamazoDefteri/Views/Auth/Login.cshtml
@@ -45,10 +45,14 @@
                 {
                 <form>
                     <div class="login-form-head">
-                        <h4>Sign In</h4>
-                        <p>Hello there, Sign in and start managing your Admin Template</p>
+                        <h4>Giriş Yap</h4>
                     </div>
                     <div class="login-form-body">
+                        <div class="form-gp exampleInputEmail1">
+                            @Html.LabelFor(x => x.username)
+                            @Html.EditorFor(x => x.username)
+                            <i class="ti-user"></i>
+                        </div>
                         <div class="form-gp exampleInputEmail1">
                             @Html.LabelFor(x => x.email)
                             @Html.EditorFor(x => x.email)
@@ -59,22 +63,12 @@
                             @Html.EditorFor(x => x.password)
                             <i class="ti-lock"></i>
                         </div>
-                        <div class="row mb-4 rmber-area">
-                            <div class="col-6">
-                                <div class="custom-control custom-checkbox mr-sm-2">
-                                    <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-                                    <label class="custom-control-label" for="customControlAutosizing">Remember Me</label>
-                                </div>
-                            </div>
-                            <div class="col-6 text-right">
-                                <a href="#">Forgot Password?</a>
-                            </div>
-                        </div>
+                        
                         <div class="submit-btn-area">
-                            <button id="form_submit" type="submit" value="login">Submit <i class="ti-arrow-right"></i></button>
+                            <button id="form_submit" type="submit" value="login">GIRIS YAP <i class="ti-arrow-right"></i></button>
                         </div>
                         <div class="form-footer text-center mt-5">
-                            <p class="text-muted">Don't have an account? <a href="/register">Sign up</a></p>
+                            <p class="text-muted">Henüz bir hesabın yok mu? <a href="/register">Kaydol</a></p>
                         </div>
                     </div>
                 </form>
