--- a/KalamazoDefteri/Views/Auth/Register.cshtml
+++ b/KalamazoDefteri/Views/Auth/Register.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@model KalamazoDefteri.ViewModels.AuthLogin
+
+@using System.Web.Optimization
 @{
     ViewBag.Title = "Register";
     Layout = null;
@@ -9,24 +11,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sign Up</title>
+    <title>KAYDOL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="content/images/icon/favicon.ico">
-    <link rel="stylesheet" href="content/css/bootstrap.min.css">
-    <link rel="stylesheet" href="content/css/font-awesome.min.css">
-    <link rel="stylesheet" href="content/css/themify-icons.css">
-    <link rel="stylesheet" href="content/css/metisMenu.css">
-    <link rel="stylesheet" href="content/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="content/css/slicknav.min.css">
-    <!-- amchart css -->
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <!-- others css -->
-    <link rel="stylesheet" href="content/css/typography.css">
-    <link rel="stylesheet" href="content/css/default-css.css">
-    <link rel="stylesheet" href="content/css/styles.css">
-    <link rel="stylesheet" href="content/css/responsive.css">
-    <!-- modernizr css -->
-    <script src="content/js/vendor/modernizr-2.8.3.min.js"></script>
+    @Styles.Render("~/projStyles")
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -41,64 +29,43 @@
     <div class="login-area login-s2">
         <div class="container">
             <div class="login-box ptb--100">
+                @using (Html.BeginForm())
+                {
                 <form>
                     <div class="login-form-head">
-                        <h4>Sign up</h4>
-                        <p>Hello there, Sign up and Join with Us</p>
+                        <h4>KAYDOL</h4>
+                        <p>Sisteme Giriş için Kaydolun.</p>
                     </div>
                     <div class="login-form-body">
-                        <div class="form-gp">
-                            <label for="exampleInputName1">Full Name</label>
-                            <input type="text" id="exampleInputName1">
+                        <div class="form-gp exampleInputEmail1">
+                            @Html.LabelFor(x => x.username)
+                            @Html.EditorFor(x => x.username)
                             <i class="ti-user"></i>
                         </div>
-                        <div class="form-gp">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" id="exampleInputEmail1">
+                        <div class="form-gp exampleInputEmail1">
+                            @Html.LabelFor(x => x.email)
+                            @Html.EditorFor(x => x.email)
                             <i class="ti-email"></i>
                         </div>
-                        <div class="form-gp">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" id="exampleInputPassword1">
-                            <i class="ti-lock"></i>
-                        </div>
-                        <div class="form-gp">
-                            <label for="exampleInputPassword2">Confirm Password</label>
-                            <input type="password" id="exampleInputPassword2">
+                        <div class="form-gp exampleInputPassword1">
+                            @Html.LabelFor(x => x.password)
+                            @Html.EditorFor(x => x.password)
                             <i class="ti-lock"></i>
                         </div>
                         <div class="submit-btn-area">
-                            <button id="form_submit" type="submit">Submit <i class="ti-arrow-right"></i></button>
-                            <div class="login-other row mt-4">
-                                <div class="col-6">
-                                    <a class="fb-login" href="#">Sign up with <i class="fa fa-facebook"></i></a>
-                                </div>
-                                <div class="col-6">
-                                    <a class="google-login" href="#">Sign up with <i class="fa fa-google"></i></a>
-                                </div>
-                            </div>
+                            <button id="form_submit" type="submit">KAYDOL <i class="ti-arrow-right"></i></button>
                         </div>
                         <div class="form-footer text-center mt-5">
-                            <p class="text-muted">Don't have an account? <a href="login.html">Sign in</a></p>
+                            <p class="text-muted">Hesabın zaten var mı? <a href="/login">Giriş Yap</a></p>
                         </div>
                     </div>
                 </form>
+                }
             </div>
         </div>
     </div>
     <!-- login area end -->
     <!-- jquery latest version -->
-    <script src="content/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="content/js/popper.min.js"></script>
-    <script src="content/js/bootstrap.min.js"></script>
-    <script src="content/js/owl.carousel.min.js"></script>
-    <script src="content/js/metisMenu.min.js"></script>
-    <script src="content/js/jquery.slimscroll.min.js"></script>
-    <script src="content/js/jquery.slicknav.min.js"></script>
-
-    <!-- others plugins -->
-    <script src="content/js/plugins.js"></script>
-    <script src="content/js/scripts.js"></script>
+    @Scripts.Render("~/projScripts");
 </body>
 </html>
