--- a/KalamazoDefteri/Views/Firmalar/Index.cshtml
+++ b/KalamazoDefteri/Views/Firmalar/Index.cshtml
@@ -1,7 +1,63 @@
-﻿
-@{
-    ViewBag.Title = "Firma Görüntüle";
-}
+﻿@model KalamazoDefteri.ViewModels.CompaniesIndex
+    @{
+        ViewBag.Title = "Firma Görüntüle";
+    }
 
-<h2>Firmalar Index Action</h2>
+    @*/*
+    Create.Table("companies")
+    .WithColumn("companyID").AsInt32().Identity().PrimaryKey()
+    .WithColumn("companyName").AsString(128)
+    .WithColumn("address").AsString(256)
+    .WithColumn("phoneNumber").AsString(15)
+    .WithColumn("faxNumber").AsString(15)
+    .WithColumn("TaxAdministration").AsString(15)
+    .WithColumn("IBAN").AsString(32)
+    .WithColumn("balance").AsInt32(); // longest IBAN belongs to Saint Lucia
+    */*@
 
+
+        <div class="col-12 mt-5">
+            <div class="card">
+                <div class="card-body">
+                    <table class="table text-center">
+                        <thead class="text-uppercase bg-primary">
+                            <tr class="text-white">
+                                <th scope="col">ID</th>
+                                <th scope="col">Firma Adı</th>
+                                <th scope="col">Telefon No.</th>
+                                <th scope="col">Mevcut Bakiye</th>
+                                <th scope="col">İşlemler</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var company in Model.ourCompanies)
+                            {
+                                <tr>
+                                    <th scope="row">@company.Companyid</th>
+                                    <td>@company.Companyname</td>
+                                    <td>@company.Phonenumber</td>
+                                    <td>@company.Balance</td>
+                                    <td class="pull-left" style="height:26px;">
+                                        
+                                        <a href="#" class="btn btn-flat btn-success" style="margin-right:0; height:26px; padding-top:4px;"><i class="ti-user"></i> DÜZENLE</a>
+                                        <a href="#" class="btn btn-flat btn-danger" style="margin-right:0; height:26px; padding-top:4px;"><i class="ti-settings"></i> PAROLA SIFIRLA</a>
+                                        <a href="#" data-post=" Kullanıcısını Silmek İstediğinize Emin Misiniz?" class="btn btn-flat btn-warning" style="margin-right:0; height:26px; padding-top:4px;"><i class="ti-trash"></i> SİL</a>
+
+
+                                    </td>
+                                </tr>
+                            }
+                            <tr>
+                                <th scope="row"></th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td>
+                                    <button class="btn btn-flat btn-primary pull-right" style="margin-right:0;"><i class="ti-plus" style="color:yellow;">  </i> YENI KULLANICI OLUSTUR</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
